name:                job-server
version:             0.1.0.0
synopsis:            simple, parallel job scheduling
-- description:         
homepage:            http://github.com/bgamari/job-server
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@gmail.com
copyright:           (c) 2014 Ben Gamari <bgamari@gmail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable tpar
  main-is:             TPar.hs
  other-extensions:    DeriveGeneric
  build-depends:       base >=4.5 && <4.9,
                       ghc-prim,
                       binary >=0.7 && <0.8,
                       bytestring >=0.10 && <0.11,
                       errors >=1.4 && <1.5,
                       transformers >=0.3 && <0.5,
                       async >=2.0 && <2.1,
                       stm >=2.4 && <2.5,
                       network >=2.4 && <2.7,
                       process >=1.1 && <1.3,
                       pipes >=4.0 && <4.2,
                       pipes-bytestring >=2.0 && <2.2,
                       optparse-applicative >= 0.10 && <0.12
  default-language:    Haskell2010

