name:                tpar
version:             0.1.0.0
synopsis:            simple, parallel job scheduling
-- description:         
homepage:            http://github.com/bgamari/tpar
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@gmail.com
copyright:           (c) 2014 Ben Gamari <bgamari@gmail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable tpar
  main-is:             TPar.hs
  other-extensions:    DeriveGeneric
  build-depends:       base >=4.5 && <4.10,
                       ghc-prim,
                       binary >=0.7 && <0.9,
                       bytestring >=0.10 && <0.11,
                       errors >=2.0 && <2.2,
                       transformers >=0.3 && <0.6,
                       async >=2.0 && <2.2,
                       stm >=2.4 && <2.5,
                       process >=1.1 && <1.5,
                       pipes >=4.0 && <4.2,
                       pipes-bytestring >=2.0 && <2.2,
                       pipes-concurrency,
                       optparse-applicative >= 0.10 && <0.13,
                       distributed-process >= 0.6 && <0.7,
                       network-transport-tcp >= 0.4,
                       network >= 2.4 && < 2.7,
                       heaps >= 0.3 && < 0.4
  default-language:    Haskell2010
  ghc-options:         -threaded
