name:                tpar
version:             0.1.0.0
synopsis:            simple, parallel job scheduling
-- description:         
homepage:            http://github.com/bgamari/tpar
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@gmail.com
copyright:           (c) 2014 Ben Gamari <bgamari@gmail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable tpar
  main-is:             Main.hs
  other-modules:       TPar.Server
                       TPar.Server.Types
                       TPar.JobMatch
                       TPar.ProcessPipe
                       TPar.RemoteStream
                       TPar.Rpc
                       TPar.Types
                       TPar.Utils
  other-extensions:    DeriveGeneric
  build-depends:       base >=4.5 && <4.10,
                       ghc-prim,
                       binary >=0.7 && <0.9,
                       bytestring >=0.10 && <0.11,
                       containers >= 0.5 && < 0.6,
                       errors >=2.0 && <2.2,
                       transformers >=0.3 && <0.6,
                       exceptions >= 0.8 && < 0.9,
                       async >=2.0 && <2.2,
                       stm >=2.4 && <2.5,
                       process >=1.1 && <1.5,
                       pipes >=4.0 && <4.3,
                       pipes-bytestring >=2.0 && <2.2,
                       pipes-safe >= 2.2 && < 2.3,
                       pipes-concurrency,
                       optparse-applicative >= 0.10 && <0.13,
                       distributed-process >= 0.6 && <0.7,
                       network-transport-tcp >= 0.4,
                       network >= 2.4 && < 2.7,
                       heaps >= 0.3 && < 0.4,
                       ansi-wl-pprint >= 0.6 && < 0.7,
                       trifecta >= 1.5 && < 1.6
  default-language:    Haskell2010
  ghc-options:         -threaded -eventlog -rtsopts -Wall

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Benchmark.hs
  build-depends:       base >=4.5 && <4.10,
                       ghc-prim,
                       binary,
                       bytestring,
                       containers,
                       errors,
                       transformers,
                       exceptions,
                       async,
                       stm,
                       process,
                       pipes,
                       pipes-bytestring,
                       pipes-safe,
                       pipes-concurrency,
                       optparse-applicative,
                       distributed-process,
                       network-transport-tcp,
                       network,
                       heaps,
                       trifecta
  default-language:    Haskell2010
  ghc-options:         -threaded -eventlog -rtsopts